--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta charset="utf-8" />
     <title>FrontEnd</title>
-    <base href="/" />
+    <base href="https://ratte2d3d.github.io/git-pages/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <style>
